Added required to input

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <!-- SEARCH QUERY SECTION -->
     <form action="/results" method="POST">
         <!--   name attribute is what gets passed on submission to app.py     -->
-        <input type="text" placeholder="Enter a film or TV series" name="search_query" id="content">
+        <input type="text" placeholder="Enter a film or TV series" name="search_query" id="content" required>
         <input type="submit" value="Search">
     </form>
 
